Add Support for reading ORC without Hive
Support reading ORC files directly from blob storage without accessing
the Hive metastore.

Support reading ORC files by creating the schema by index

Read ORC files by creating a positional column matching as opposed to
matching columns by name. This allows users create a PXF external table
in Greenplum that does not match the column names in the ORC schema.
Thsi is helpful for ORC files that were created by a writer earlier than
HIVE-4243, where the column names would be stored as "_col{index}". This
is noticeable in ORC files written by Hive 1.2 for example.

To use positional access, we introduce the MAP_BY_POSITION boolean
option to be specified in the LOCATION of the table definition, for
example:

```
CREATE EXTERNAL TABLE pxf_orc_r (id int, name text)
LOCATION
('pxf://path/to/orc?PROFILE=hdfs:orc&MAP_BY_POSITION=true&SERVER=cdh')
FORMAT 'CUSTOM' (formatter='pxfwritable_import');
```

Support predicate pushdown with positional access

When using positional access in ORC, the ORC schema might not match the
Greenplum schema. This results in predicate pushdown being ignored
because the pushdown information relies on matching the column names in
the Greenplum and ORC schemas. This commit fixes the pushdown when the
column names do not match.

Add ORC automation tests

Test querying tables, subset of the ORC file.
Test querying multiple ORC files that are not in the same order and have
a subset of the columns.
Test MAP_BY_INDEX property.
Test column projection and predicate pushdown.

--- a/server/pxf-hdfs/build.gradle
+++ b/server/pxf-hdfs/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation("org.apache.parquet:parquet-generator:${parquetVersion}") { transitive = false }
     implementation("org.apache.parquet:parquet-hadoop:${parquetVersion}") { transitive = false }
     implementation("org.apache.parquet:parquet-jackson:${parquetVersion}") { transitive = false }
-    implementation("org.apache.hive:hive-storage-api:2.4.0") { transitive = false }// for parquet writing
+    implementation("org.apache.hive:hive-storage-api:${hiveStorageApiVersion}") { transitive = false }// for parquet writing
 
     implementation("org.codehaus.jackson:jackson-core-asl:1.9.13") { transitive = false }
     implementation("org.codehaus.jackson:jackson-mapper-asl:1.9.13") { transitive = false }
@@ -61,6 +61,13 @@ dependencies {
     implementation("log4j:log4j:1.2.17")                         { transitive = false }
     implementation("com.fasterxml.woodstox:woodstox-core:5.0.3") { transitive = false }
     implementation("org.codehaus.woodstox:stax2-api:3.1.4")      { transitive = false }
+
+    // ORC dependencies
+    implementation("org.apache.orc:orc-core:${orcVersion}")      { transitive = false }
+    implementation("org.apache.orc:orc-shims:${orcVersion}")     { transitive = false }
+    implementation("org.apache.hive:hive-common:${hiveVersion}") { transitive = false }
+    implementation("com.google.protobuf:protobuf-java:2.5.0")    { transitive = false }
+    implementation("org.threeten:threeten-extra:1.5.0")          { transitive = false }
 
     /*******************************
      * Dependencies for Supported Hadoop-Compatible Filesystems
