--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -20,6 +20,7 @@ license=ASL 2.0
 hadoopVersion=2.9.2
 htraceVersion=4.0.1-incubating
 hiveVersion=2.3.7
+hiveStorageApiVersion=2.7.2
 hbaseVersion=1.3.2
 junitVersion=4.11
 pxfProtocolVersion=v15
@@ -29,3 +30,11 @@ spring_boot_version=2.4.0
 org.gradle.daemon=true
 org.gradle.parallel=false
 lfScanConfiguration=bootJar
+# ORC versions 1.6.x have breaking changes with
+# org.apache.hadoop.hive.ql.io.orc.ReaderImpl because
+# org.apache.orc.impl.ReaderImpl removes the types property which is used to
+# create the object inspector:
+# this.inspector = OrcStruct.createObjectInspector(0, types);
+# The types property is being restored at some point in newer (unreleased as of
+# now) versions of ORC 1.6. Check when version 1.6.6 is released
+orcVersion=1.5.12
