--- a/server/pxf-hive/build.gradle
+++ b/server/pxf-hive/build.gradle
@@ -42,8 +42,8 @@ dependencies {
     implementation("org.apache.hive.shims:hive-shims-common:${hiveVersion}") { transitive = false }
     implementation("org.apache.hive.shims:hive-shims-0.23:${hiveVersion}") { transitive = false }
     implementation("org.apache.commons:commons-lang3:3.1") { transitive = false }
-    implementation("org.apache.hive:hive-storage-api:2.4.0") { transitive = false }
-    implementation("org.apache.orc:orc-core:1.3.4") { transitive = false }
+    implementation("org.apache.hive:hive-storage-api:${hiveStorageApiVersion}") { transitive = false }
+    implementation("org.apache.orc:orc-core:${orcVersion}") { transitive = false }
     implementation("io.airlift:aircompressor:0.8") { transitive = false }
     implementation("joda-time:joda-time") { transitive = false }
     implementation("org.objenesis:objenesis:2.1") { transitive = false }
