--- a/server/pxf-service/build.gradle
+++ b/server/pxf-service/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation("commons-lang:commons-lang")
     implementation("org.springframework.boot:spring-boot-starter-log4j2")
     implementation('org.springframework.boot:spring-boot-starter-actuator')
+    implementation('io.micrometer:micrometer-registry-prometheus')
 
     implementation("org.apache.hadoop:hadoop-hdfs-client:${hadoopVersion}") { transitive = false }
 
