--- a/server/pxf-service/src/main/resources/application.properties
+++ b/server/pxf-service/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-# Expose health, info, and shutdown endpoints by default
+# Expose health, info, shutdown, metrics, and prometheus endpoints by default
 # 1. health: returns the status of the application {"status":"UP"}
 # 2. info: returns information about the build {"build":{"version":"X.X.X","artifact":"pxf-service","name":"pxf-service","group":"org.greenplum.pxf","time":"timestamp"}}
 # 3. shutdown: allows shutting down the application
-management.endpoints.web.exposure.include=health,info,shutdown
+# 4. metrics: shows ‘metrics’ information for the application
+# 5. prometheus: exposes metrics in a format that can be scraped by a Prometheus server
+management.endpoints.web.exposure.include=health,info,shutdown,metrics,prometheus
 management.endpoint.shutdown.enabled=true
 management.endpoint.health.probes.enabled=true
+
+# common tags applied to all metrics
+management.metrics.tags.application=pxf-service
 
 spring.profiles.active=default
 
@@ -22,6 +27,7 @@ server.max-http-header-size=${pxf.tomcat.max-header-size:1048576}
 server.tomcat.threads.max=${pxf.max.threads:200}
 server.tomcat.accept-count=100
 server.tomcat.connection-timeout=${pxf.connection.timeout:5m}
+server.tomcat.mbeanregistry.enabled=true
 pxf.tomcat.max-header-count=30000
 
 # timeout (ms) for the request - 1 day
