--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,7 +19,7 @@
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -39,7 +39,7 @@ allprojects {
     apply plugin: "eclipse"
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
 }
 
