--- a/concourse/pipelines/templates/pr_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/pr_pipeline-tpl.yml
@@ -40,6 +40,7 @@ resources:
   type: pull-request
   source:
     repository: greenplum-db/pxf
+    base_branch: {{pxf-git-branch}}
     access_token: {{pxf-bot-access-token}}
 
 ## ---------- Docker Images ----------
