--- a/external-table/Makefile
+++ b/external-table/Makefile
@@ -1,5 +1,5 @@
 EXTENSION = pxf
-DATA = pxf--1.0.sql
+DATA = pxf--2.0.sql pxf--1.0--2.0.sql pxf--1.0.sql
 MODULE_big = pxf
 OBJS       = src/pxfprotocol.o src/pxfbridge.o src/pxfuriparser.o src/libchurl.o src/pxfutils.o src/pxfheaders.o src/gpdbwritableformatter.o src/pxffilters.o
 REGRESS    = setup pxf pxfinvalid
@@ -22,6 +22,8 @@ stage: pxf.so
 	install -c -m 755 pxf.so build/stage/pxf.so
 	install -c -m 644 pxf.control build/stage/
 	install -c -m 644 pxf--1.0.sql build/stage/
+	install -c -m 644 pxf--2.0.sql build/stage/
+	install -c -m 644 pxf--1.0--2.0.sql build/stage/
 	@echo $(GP_MAJORVERSION) > build/metadata/gp_major_version
 	@echo $(BLD_ARCH) | sed 's/_/-/' > build/metadata/build_arch
 
