--- a/server/pxf-service/src/main/resources/application.properties
+++ b/server/pxf-service/src/main/resources/application.properties
@@ -41,5 +41,5 @@ pxf.task.pool.max-size=${pxf.max.threads:200}
 pxf.task.pool.queue-capacity=0
 
 # logging
-logging.file.name=${pxf.logdir:/var/log}/pxf-service.log
-logging.file.path=${pxf.logdir:/var/log}
+logging.file.name=${pxf.logdir:/tmp}/pxf-service.log
+logging.file.path=${pxf.logdir:/tmp}
