--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -26,7 +26,7 @@ junitVersion=4.11
 pxfProtocolVersion=v15
 parquetVersion=1.11.1
 awsJavaSdk=1.11.801
-spring_boot_version=2.4.3
+springBootVersion=2.4.3
 org.gradle.daemon=true
 org.gradle.parallel=false
 # ORC versions 1.6.x have breaking changes with
