add application property for configuring logging level
The application property `pxf.log.level` is added for setting the value
of Spring Boot's `logging.level.root` property. This allows a user to
change the logging level of the PXF service by editing the property in
pxf-application.properties or setting an environment variable
(`PXF_LOG_LEVEL`) when (re-)starting PXF.

Authored-by: Bradford D. Boyle <bradfordb@vmware.com>

--- a/server/pxf-service/src/templates/conf/pxf-application.properties
+++ b/server/pxf-service/src/templates/conf/pxf-application.properties
@@ -16,3 +16,7 @@
 # pxf.task.pool.core-size=8
 # pxf.task.pool.queue-capacity=0
 # pxf.task.pool.max-size=200
+
+# Logging
+# To enable debug logging, uncomment and change `info` to `debug` here
+# pxf.log.level=info
