--- a/server/pxf-service/src/main/resources/application.properties
+++ b/server/pxf-service/src/main/resources/application.properties
@@ -43,3 +43,4 @@ pxf.task.pool.queue-capacity=0
 # logging
 logging.file.name=${pxf.logdir:/tmp}/pxf-service.log
 logging.file.path=${pxf.logdir:/tmp}
+logging.pattern.level=%5p [%X{sessionId}:%X{segmentId}]
