report "fragments.sent" PXF metric (#579)

--- a/server/pxf-service/src/main/resources/application.properties
+++ b/server/pxf-service/src/main/resources/application.properties
@@ -11,6 +11,9 @@ management.endpoint.health.probes.enabled=true
 # common tags applied to all metrics
 management.metrics.tags.application=pxf-service
 
+# PXF-specific metrics
+pxf.metrics.fragments.enabled=true
+
 spring.profiles.active=default
 
 server.port=${pxf.port:5888}
