Add PXF version header to requests
The server now checks for a PXF API version header in RequestParser

- if the header is missing, an error message is returned which provides
  a hint to upgrade the PXF exentsion
- if the API version reported by the extension does not match with the
  API version on the server, an error message with the hint to upgrade
  the extension is returned
  - in future revisions of the API, the server may support clients
    (e.g., extension, Spark connector, etc.) using an older API version
- the value of the API version being used by the extension is stored as
  a field on the RequestContext

[#176749393]

Co-authored-by: Ashuka Xue <axue@vmware.com>
Co-authored-by: Bradford D. Boyle <bradfordb@vmware.com>

--- a/external-table/Makefile
+++ b/external-table/Makefile
@@ -7,6 +7,9 @@ REGRESS    = setup pxf pxfinvalid
 PG_CONFIG = pg_config
 PGXS := $(shell $(PG_CONFIG) --pgxs)
 
+PXF_API_VERSION := $(shell cat ../api_version)
+PG_CPPFLAGS := -DPXF_API_VERSION=\"$(PXF_API_VERSION)\"
+
 ifndef PGXS
     $(error Make sure the Greenplum installation binaries are in your PATH. i.e. export PATH=<path to your greenplum installation>/bin:$$PATH)
 endif
