--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -16,6 +16,7 @@
 # under the License.
 
 version=0.0.0-SNAPSHOT
+apiVersion=0
 license=ASL 2.0
 hadoopVersion=2.10.1
 htraceVersion=4.0.1-incubating
@@ -23,7 +24,6 @@ hiveVersion=2.3.7
 hiveStorageApiVersion=2.7.2
 hbaseVersion=1.3.2
 junitVersion=4.11
-pxfProtocolVersion=v15
 parquetVersion=1.11.1
 awsJavaSdk=1.11.801
 springBootVersion=2.4.3
