Add metrics for reporting records sent from PXF to gpdb (#583)
This commit adds a counter for tracking the number of records PXF sends
out. We report on frequency determined by
pxf.metrics.records.report-frequency.

Co-authored-by: Ashuka Xue <axue@vmware.com>
Co-authored-by: Alex Denissov <adenissov@vmware.com>

--- a/server/pxf-service/src/main/resources/application.properties
+++ b/server/pxf-service/src/main/resources/application.properties
@@ -13,6 +13,8 @@ management.metrics.tags.application=pxf-service
 
 # PXF-specific metrics
 pxf.metrics.fragments.enabled=true
+pxf.metrics.records.enabled=true
+pxf.metrics.records.report-frequency=1000
 
 spring.profiles.active=default
 
