updated deps versions to correspond to what gets packaged (#587)

--- a/server/pxf-service/build.gradle
+++ b/server/pxf-service/build.gradle
@@ -62,12 +62,15 @@ dependencies {
     testImplementation("commons-io:commons-io")
     testImplementation("org.simplify4u:slf4j-mock:2.1.0") // for MDC mocking
 
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    developmentOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.boot:spring-boot-starter-webflux')
 }
 
 bootJar {
+    layered {
+        enabled = false
+    }
     manifest {
         attributes("Implementation-Title": project.name)
         attributes("Implementation-Version": project.version)
