Add bytes report monitoring to PXF (#595)
This commit adds `bytes.sent` and `bytes.received` as metrics
that PXF can report to the metrics endpoint. 

Co-authored-by: Alex Denissov <adenissov@vmware.com>
Co-authored-by: Ashuka Xue <axue@vmware.com>
Co-authored-by: Bradford D. Boyle <bradfordb@vmware.com>

--- a/server/pxf-service/src/main/resources/application.properties
+++ b/server/pxf-service/src/main/resources/application.properties
@@ -14,7 +14,8 @@ management.metrics.tags.application=pxf-service
 # PXF-specific metrics
 pxf.metrics.fragments.enabled=true
 pxf.metrics.records.enabled=true
-pxf.metrics.records.report-frequency=1000
+pxf.metrics.bytes.enabled=true
+pxf.metrics.report-frequency=1000
 
 spring.profiles.active=default
 
