Allow configuring connection timeout for data uploads to PXF (#644)

--- a/server/pxf-service/src/main/resources/application.properties
+++ b/server/pxf-service/src/main/resources/application.properties
@@ -35,6 +35,8 @@ server.tomcat.accept-count=100
 server.tomcat.connection-timeout=${pxf.connection.timeout:5m}
 server.tomcat.mbeanregistry.enabled=true
 pxf.tomcat.max-header-count=30000
+pxf.tomcat.disable-upload-timeout=false
+pxf.tomcat.connection-upload-timeout=${pxf.connection.upload-timeout:5m}
 
 # timeout (ms) for the request - 1 day
 # TODO: spring_boot_todo what value should we set here
