--- a/server/pxf-service/src/templates/conf/pxf-application.properties
+++ b/server/pxf-service/src/templates/conf/pxf-application.properties
@@ -9,6 +9,7 @@
 
 # Server connection timeout (-1 for infinite timeout)
 # pxf.connection.timeout=5m
+# pxf.connection.upload-timeout=5m
 
 # Threads
 # pxf.max.threads=200
