--- a/automation/pom.xml
+++ b/automation/pom.xml
@@ -17,8 +17,8 @@
         <java.version>1.8</java.version>
         <gphd.home>${GPHD_ROOT}</gphd.home>
         <pxf.lib>${user.home}/automation_tmp_lib</pxf.lib>
-        <hdp.hadoop.version>2.9.2</hdp.hadoop.version>
-        <hdp.hbase.version>1.1.2</hdp.hbase.version>
+        <hdp.hadoop.version>2.10.1</hdp.hadoop.version>
+        <hdp.hbase.version>1.3.2</hdp.hbase.version>
         <hdp.hive.version>1.1.0</hdp.hive.version>
         <snappy.java.version>1.1.1.7</snappy.java.version>
         <powermock.version>1.6.4</powermock.version>
@@ -212,6 +212,21 @@
             <groupId>xalan</groupId>
             <artifactId>xalan</artifactId>
             <version>2.7.1</version>
+        </dependency>
+
+        <!--
+        Based on this StackOverflow answer: https://stackoverflow.com/a/42994052
+        The xalan dependency (above) pulls in an outdated version of xml-apis that causes
+
+        java.lang.NoClassDefFoundError: org/w3c/dom/ElementTraversal
+
+        when running on JDK8. By directly depending on a slightly newer version, we
+        can run on either JDK8 or JDK11.
+        -->
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
         </dependency>
 
         <dependency>
