Pull container images from GCR instead of DockerHub (#650)
* Pull container images from GCR instead of DockerHub

The GP RelEng team is moving all upstream container images from
DockerHub to a public Google Container Registrt (GCR). This commit
updates our CI code to point at the new location.

- update CCP image tag
- change Concourse docker-image to registry-image
- replace DockerHub repository `pivotldata` with `gcr.io/data-gpdb-public-images`
  - matched FROM in Dockerfile with build arg from couldbuild steps
  - identified several unused Dockerfiles for potential deletion

Co-authored-by: Bradford D. Boyle <bradfordb@vmware.com>
Co-authored-by: Ashuka Xue <axue@vmware.com>

* Change images to use an environment variable for the GCR project id

* Remove unused centos6 MapR image

* jq was added to the base docker image so we no longer need to install it

Co-authored-by: Ashuka Xue <axue@vmware.com>

--- a/concourse/docker/pxf-dev-base/cloudbuild.yaml
+++ b/concourse/docker/pxf-dev-base/cloudbuild.yaml
@@ -29,7 +29,7 @@ steps:
   id: gpdb5-centos7-test-pxf-image
   args:
   - 'build'
-  - '--build-arg=BASE_IMAGE=${_BASE_IMAGE_REPOSITORY}/centos-gpdb-dev:7-gcc6.2-llvm3.7'
+  - '--build-arg=BASE_IMAGE=${_BASE_IMAGE_REPOSITORY}/gpdb5-centos7-build-test:latest'
   - '--tag=gcr.io/$PROJECT_ID/gpdb-pxf-dev/gpdb5-centos7-test-pxf:$COMMIT_SHA'
   - '--cache-from'
   - 'gcr.io/$PROJECT_ID/gpdb-pxf-dev/gpdb5-centos7-test-pxf:latest'
