--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -170,14 +170,14 @@ resource_types:
 
 {% if email_notification %}
 - name: email
-  type: docker-image
+  type: registry-image
   source:
     repository: pcfseceng/email-resource
 {% endif %}
 
 {% if slack_notification %}
 - name: slack-notification
-  type: docker-image
+  type: registry-image
   source:
     repository: cfcommunity/slack-notification-resource
     tag: latest
@@ -391,8 +391,8 @@ resources:
   type: registry-image
   icon: docker
   source:
-    repository: pivotaldata/ccp
-    tag: 7
+    repository: gcr.io/data-gpdb-public-images/ccp
+    tag: latest
 
 - name: google-cloud-sdk-slim-image
   type: registry-image
